<resources>
    <!--Common String-->
    <string name="submit">Login</string>

    <!--Login-->
    <string name="app_name">Hunger Bounce App</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="background">Background picture</string>
    <string name="login_title_fast">Hunger</string>
    <string name="login_title_food">Bounce</string>
    <string name="login_subtitle">Your best food delivery app</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main_page">Main_page</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--String use in profile:-->
    <string name="edit_profile_string">Edit Profile</string>
    <string name="user_icon">User Icon</string>
    <string name="user_name">User Name</string>
    <string name="sign_out_string">Sign Out</string>
    <string name="email_icon">Email Icon</string>
    <string name="map_tool_icon">Map Tool Icon</string>
    <string name="basket_icon">Basket Icon</string>
    <string name="order_icon">Order Icon</string>
    <string name="address_icon"> Address Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="phone_string">Phone Number</string>
    <string name="email_string">Email Address</string>
    <string name="address_string">Home Address</string>
    <string name="order_string">Order History</string>
    <string name="basket_string">Basket</string>
    <string name="map_tool_string">Map Tool</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="food_image">food_image</string>
    <string name="signup_title">Sign up</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="bank">bank</string>
    <string name="restaurant">restaurant</string>
    <string name="atm">atm</string>
    <string name="hospital">hospital</string>
</resources>
