<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".LoginPage">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            android:contentDescription="@string/background" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90sp"
            android:background="@color/background_blue"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:fontFamily="cursive"
                    android:text="@string/login_title_fast"
                    android:textColor="#ffffff"
                    android:textSize="70sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/login_title_food"
                    android:textColor="#ffffff"
                    android:textSize="70sp" />

            </LinearLayout>

            <View
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/login_subtitle"
                android:textColor="#BFFFFFFF"
                android:textSize="14sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:background="@color/background_blue"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/login_hint_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="16dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="228dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_bg_nocolor"
                android:fontFamily="@font/calibri"
                android:text="@string/login_sign_in"
                android:textAllCaps="false"
                android:textColor="#BFFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="170sp"
                android:fontFamily="@font/calibri"
                android:text="@string/login_sign_up"
                android:textColor="#BFFFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/calibri"
                android:text="@string/forgot_password"
                android:textColor="#BFFFFFFF"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
