<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:background="@color/background"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TitleLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:fontFamily="cursive"
                    android:text="@string/login_title_fast"
                    android:textColor="@color/white"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/TitleRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/login_title_food"
                    android:textColor="@color/white"
                    android:textSize="60sp" />

            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

            <TextView
                android:id="@+id/Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/calibri"
                android:gravity="center"
                android:text="@string/login_subtitle"
                android:textColor="#BFFFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/beige"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:hint="@string/login_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/beige"
                tools:theme="@style/EditScreenTextInputLayoutStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/beige"
            android:layout_below="@+id/EmailInput"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="15dp"
                android:ems="10"
                android:fontFamily="@font/calibri"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/beige"
                tools:theme="@style/EditScreenTextInputLayoutStyle" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Sign_up_btn"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_transparent"
            android:layout_below="@+id/PasswordInput"
            android:fontFamily="@font/calibri"
            android:text="submit"
            android:textColor="#E6FFFFFF"
            tools:textStyle="bold" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/calibri"
                android:textColor="@color/beige"
                android:text="No account yet? Sign up"
                tools:textStyle="bold"
                style="?android:attr/buttonBarButtonStyle"  />

    </LinearLayout>

</LinearLayout>